--- a/parser.ipynb
+++ b/parser.ipynb
@@ -61,8 +61,7 @@
     "                elif attrs == [('data-ingredient-name', 'true')]:\n",
     "                    return HTMLTag.INGREDIENT_NAME\n",
     "            elif tag == 'p':\n",
-    "                if attrs == [('id', 'mntl-sc-block_3-0'),\n",
-    "                            ('class', 'comp mntl-sc-block mntl-sc-block-html')]:\n",
+    "                if ('class', 'comp mntl-sc-block mntl-sc-block-html') in attrs:\n",
     "                    return HTMLTag.STEP\n",
     "        return HTMLTag.UNKNOWN"
    ]
@@ -202,7 +201,19 @@
        "  {'quantity': Fraction(3, 2),\n",
        "   'unit': 'cups',\n",
        "   'name': 'freshly grated Parmesan cheese'}],\n",
-       " 'steps': ['Lay eggplant slices on paper towels; sprinkle lightly with salt. Let sit for 30 minutes to draw out moisture, then pat dry with paper towels.'],\n",
+       " 'steps': ['Lay eggplant slices on paper towels; sprinkle lightly with salt. Let sit for 30 minutes to draw out moisture, then pat dry with paper towels.',\n",
+       "  'Warm olive oil in a skillet over high heat. Fry eggplant until browned, 2 to 3 minutes per side. Drain on paper towels; set aside.',\n",
+       "  'Melt 1 tablespoon butter in a large skillet over medium heat. Stir in ground beef, onions, and garlic; season with salt and black pepper. Cook and stir until beef is browned, 8 to 10 minutes.',\n",
+       "  'Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. Pour in tomato sauce and wine; mix well. Simmer for 20 minutes. Allow to cool, then stir in beaten egg.',\n",
+       "  'Scald milk in a saucepan over medium heat.',\n",
+       "  'At the same time, melt 1/2 cup butter in a large skillet over medium heat.',\n",
+       "  'Whisk flour into butter until smooth. Lower heat; gradually pour in scalded milk, whisking constantly until it thickens. Season béchamel sauce with salt and white pepper.',\n",
+       "  'Preheat the oven to 350 degrees F (175 degrees C). Grease a 9x13-inch baking dish.',\n",
+       "  'Arrange a single layer of eggplant in the prepared baking dish.',\n",
+       "  'Cover eggplant with meat sauce, then sprinkle 1/2 cup Parmesan cheese on top. Cover with remaining eggplant and sprinkle another 1/2 cup cheese on top.',\n",
+       "  'Pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg. Cover with remaining cheese.',\n",
+       "  'Bake in the preheated oven until bubbly and browned, about 1 hour.',\n",
+       "  'Serve hot and enjoy!'],\n",
        " 'prep time': '45 mins',\n",
        " 'cook time': '1 hr',\n",
        " 'total time': '1 hr 45 mins',\n",
