Add `INGREDIENT` HTML tag type to enum

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,12 @@
     "    UNKNOWN = auto()\n",
     "    ALLRECIPES = auto()\n",
     "\n",
-    "# Enum of relevant HTML tag values\n",
+    "# Enum of relevant HTML tag types\n",
     "class HTMLTag(Enum):\n",
     "    UNKNOWN = auto()\n",
     "    OVERVIEW_LABEL = auto()\n",
     "    OVERVIEW_TEXT = auto()\n",
+    "    INGREDIENT = auto()\n",
     "    INGREDIENT_QUANTITY = auto()\n",
     "    INGREDIENT_UNIT = auto()\n",
     "    INGREDIENT_NAME = auto()\n",
@@ -53,6 +54,9 @@
     "                    return HTMLTag.OVERVIEW_LABEL\n",
     "                elif attrs == [('class', 'mm-recipes-details__value')]:\n",
     "                    return HTMLTag.OVERVIEW_TEXT\n",
+    "            elif tag == 'li':\n",
+    "                if ('class', 'mm-recipes-structured-ingredients__list-item ') in attrs:\n",
+    "                    return HTMLTag.INGREDIENT\n",
     "            elif tag == 'span':\n",
     "                if attrs == [('data-ingredient-quantity', 'true')]:\n",
     "                    return HTMLTag.INGREDIENT_QUANTITY\n",
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +110,7 @@
     "    def handle_starttag(self, tag: str, attrs: list[tuple[str, str | None]]) -> None:\n",
     "        self.current_tag = HTMLTag.from_tag(self.source, tag, attrs)\n",
     "        match self.current_tag:\n",
-    "            case HTMLTag.INGREDIENT_QUANTITY:\n",
+    "            case HTMLTag.INGREDIENT:\n",
     "                self.ingredient = {}\n",
     "        return super().handle_starttag(tag, attrs)\n",
     "    \n",
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +225,7 @@
        " 'yield': '1 9x13-inch moussaka'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
