Add fraction to string conversion function

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,17 @@
     "    data = unicodedata.normalize('NFKD', data).translate(table).split()\n",
     "    for val in data:\n",
     "        sum += Fraction(val)\n",
-    "    return sum"
+    "    return sum\n",
+    "\n",
+    "def fraction_to_str(frac: Fraction):\n",
+    "    if frac.denominator == 1:\n",
+    "        return str(frac.numerator)\n",
+    "    elif frac.numerator >= frac.denominator:\n",
+    "        return ' '.join([str(frac.numerator // frac.denominator),\n",
+    "                         str(Fraction(frac.numerator % frac.denominator,\n",
+    "                                      frac.denominator))])\n",
+    "    else:\n",
+    "        return str(frac)"
    ]
   },
   {
