Clean up enum code
Cleans enum conversion functions and moves all enums to a separate `.py` file.

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -24,55 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from enum import Enum, auto\n",
-    "\n",
-    "# Enum of recipe sources\n",
-    "class RecipeSource(Enum):\n",
-    "    UNKNOWN = auto()\n",
-    "    ALLRECIPES = auto()\n",
-    "\n",
-    "# Enum of relevant HTML tag types\n",
-    "class HTMLTag(Enum):\n",
-    "    UNKNOWN = auto()\n",
-    "    OVERVIEW_LABEL = auto()\n",
-    "    OVERVIEW_TEXT = auto()\n",
-    "    INGREDIENT = auto()\n",
-    "    INGREDIENT_QUANTITY = auto()\n",
-    "    INGREDIENT_UNIT = auto()\n",
-    "    INGREDIENT_NAME = auto()\n",
-    "    STEP = auto()\n",
-    "\n",
-    "    @classmethod\n",
-    "    def from_tag(cls, source: RecipeSource, tag: str, attrs: list[tuple[str, str | None]]):\n",
-    "        if source == RecipeSource.ALLRECIPES:\n",
-    "            if tag == 'div':\n",
-    "                if attrs == [('class', 'mm-recipes-details__label')]:\n",
-    "                    return HTMLTag.OVERVIEW_LABEL\n",
-    "                elif attrs == [('class', 'mm-recipes-details__value')]:\n",
-    "                    return HTMLTag.OVERVIEW_TEXT\n",
-    "            elif tag == 'li':\n",
-    "                if ('class', 'mm-recipes-structured-ingredients__list-item ') in attrs:\n",
-    "                    return HTMLTag.INGREDIENT\n",
-    "            elif tag == 'span':\n",
-    "                if attrs == [('data-ingredient-quantity', 'true')]:\n",
-    "                    return HTMLTag.INGREDIENT_QUANTITY\n",
-    "                elif attrs == [('data-ingredient-unit', 'true')]:\n",
-    "                    return HTMLTag.INGREDIENT_UNIT\n",
-    "                elif attrs == [('data-ingredient-name', 'true')]:\n",
-    "                    return HTMLTag.INGREDIENT_NAME\n",
-    "            elif tag == 'p':\n",
-    "                if ('class', 'comp mntl-sc-block mntl-sc-block-html') in attrs:\n",
-    "                    return HTMLTag.STEP\n",
-    "        return HTMLTag.UNKNOWN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,11 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from html.parser import HTMLParser\n",
+    "from enums import RecipeSource, HTMLTag\n",
     "\n",
     "# Set up recipe HTML parser\n",
     "class RecipeHTMLParser(HTMLParser):\n",
@@ -150,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +188,7 @@
        " 'yield': '1 9x13-inch moussaka'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
