Create URL to recipe source function
Adds a URL-to-enum conversion function to `RecipeSource`.

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,10 +111,11 @@
     "import requests\n",
     "\n",
     "# Retrieves the text of a recipe from a given URL\n",
-    "def get_recipe_from_url(url: str) -> str | None:\n",
+    "def get_recipe_from_url(url: str) -> dict | None:\n",
     "\n",
-    "    # Return None if not an allrecipes URL\n",
-    "    if not re.findall(r'allrecipes\\.com/recipe/.*', url):\n",
+    "    # Find recipe source; return None if unsupported\n",
+    "    source = RecipeSource.from_url(url)\n",
+    "    if source == RecipeSource.UNKNOWN:\n",
     "        return None\n",
     "\n",
     "    # Add appropriate HTTPS tag if not there\n",
@@ -126,7 +127,7 @@
     "    \n",
     "    # Get the recipe from the page\n",
     "    with requests.get(url) as f:\n",
-    "        parser = RecipeHTMLParser(RecipeSource.ALLRECIPES)\n",
+    "        parser = RecipeHTMLParser(source)\n",
     "        parser.feed(f.text)\n",
     "        return parser.recipe"
    ]
