--- a/parser.ipynb
+++ b/parser.ipynb
@@ -52,33 +52,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from html.parser import HTMLParser\n",
     "from enums import RecipeSource, HTMLTag\n",
     "\n",
-    "# Set up recipe HTML parser\n",
     "class RecipeHTMLParser(HTMLParser):\n",
+    "    '''HTML parser that handles recipes'''\n",
     "\n",
-    "    # Initialize class, setting recipe to empty\n",
     "    def __init__(self, source: RecipeSource, convert_charrefs: bool = True) -> None:\n",
+    "        # Initialize class, setting recipe to empty\n",
     "        self.source = source\n",
     "        self.recipe = {'ingredients': [], 'steps': []}\n",
     "        self.current_tag = HTMLTag.UNKNOWN\n",
     "        super().__init__(convert_charrefs=convert_charrefs)\n",
     "    \n",
-    "    # Save the current tag\n",
     "    def handle_starttag(self, tag: str, attrs: list[tuple[str, str | None]]) -> None:\n",
+    "        # Save the current tag\n",
     "        self.current_tag = HTMLTag.from_tag(self.source, tag, attrs)\n",
     "        match self.current_tag:\n",
     "            case HTMLTag.INGREDIENT:\n",
     "                self.ingredient = {}\n",
     "        return super().handle_starttag(tag, attrs)\n",
     "    \n",
-    "    # Handle text between tags as appropriate\n",
     "    def handle_data(self, data: str) -> None:\n",
+    "        # Handle text between tags as appropriate\n",
     "        match self.current_tag:\n",
     "            case HTMLTag.OVERVIEW_LABEL:\n",
     "                self.label = data.lower().strip(':,.! \\n\\t')\n",
@@ -95,8 +95,8 @@
     "                self.recipe['steps'].append(data.strip())\n",
     "        return super().handle_data(data)\n",
     "\n",
-    "    # Reset tag\n",
     "    def handle_endtag(self, tag: str) -> None:\n",
+    "        # Reset tag\n",
     "        self.current_tag = HTMLTag.UNKNOWN\n",
     "        return super().handle_endtag(tag)"
    ]
@@ -110,8 +110,8 @@
     "import re\n",
     "import requests\n",
     "\n",
-    "# Retrieves the text of a recipe from a given URL\n",
     "def get_recipe_from_url(url: str) -> dict | None:\n",
+    "    '''Retrieves the text of a recipe from a given URL'''\n",
     "\n",
     "    # Find recipe source; return None if unsupported\n",
     "    source = RecipeSource.from_url(url)\n",
