Implement initial method parsing
Does several things:
* Introduces `Ingredient`, `Step`, and `Recipe` classes
* Splits recipe instructions into steps
* Parses methods for those steps

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -26,6 +26,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting en-core-web-md==3.8.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl (33.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('en_core_web_md')\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 -m spacy download en_core_web_md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from fractions import Fraction\n",
@@ -52,7 +73,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Ingredient:\n",
+    "    '''Struct holding ingredient information'''\n",
+    "\n",
+    "    def __init__(self, name: str | None = None,\n",
+    "                 quantity: Fraction | None = None,\n",
+    "                 unit: str | None = None):\n",
+    "        self.name = name\n",
+    "        self.quantity = quantity\n",
+    "        self.unit = unit\n",
+    "\n",
+    "class Step:\n",
+    "    '''Struct holding step information'''\n",
+    "\n",
+    "    def __init__(self, text: str):\n",
+    "        self.text = text\n",
+    "        self.ingredients = []\n",
+    "        self.tools = []\n",
+    "        self.methods = []\n",
+    "        self.times = []\n",
+    "    \n",
+    "class Recipe:\n",
+    "    '''Struct holding recipe information'''\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.ingredients = []\n",
+    "        self.steps = []\n",
+    "        self.other = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import spacy\n",
+    "nlp = spacy.load(\"en_core_web_md\")\n",
+    "\n",
+    "def parse_and_add_step(instr: str, recipe: Recipe) -> None:\n",
+    "    '''Parses an instruction into maybe more steps and adds to recipe.'''\n",
+    "\n",
+    "    # Split recipe instruction into \"sentences\" for SpaCy parser\n",
+    "    steps = re.split(r'(?:\\.|;|, then)\\s+', instr)\n",
+    "\n",
+    "    for text in steps:\n",
+    "\n",
+    "        if not text:\n",
+    "            continue\n",
+    "\n",
+    "        # Form a nice sentence for the step text, and initialize step\n",
+    "        text = ''.join([text[0].upper(), text[1:len(text)]])\n",
+    "        if not text.endswith('.'):\n",
+    "            text = ''.join([text, '.'])\n",
+    "        step = Step(text)\n",
+    "\n",
+    "        # Uncapitalize the first letter. This prevents SpaCy from reading the\n",
+    "        # first word as a proper noun (imperative sentences are less common in\n",
+    "        # its dataset).\n",
+    "        text = ''.join([text[0].lower(), text[1:len(text)]])\n",
+    "\n",
+    "        # Based on the dependency + part of speech tagging, parse necessary\n",
+    "        # information.\n",
+    "        doc = nlp(text)\n",
+    "        for token in doc:\n",
+    "            dep = token.dep_\n",
+    "            match dep:\n",
+    "                case 'ROOT':\n",
+    "                    step.methods.append(token.text)\n",
+    "                case 'conj':\n",
+    "                    if token.head.pos_ == 'VERB':\n",
+    "                        step.methods.append(token.text)\n",
+    "        \n",
+    "        # Save step to recipe\n",
+    "        recipe.steps.append(step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +169,7 @@
     "    def __init__(self, source: RecipeSource, convert_charrefs: bool = True) -> None:\n",
     "        # Initialize class, setting recipe to empty\n",
     "        self.source = source\n",
-    "        self.recipe = {'ingredients': [], 'steps': []}\n",
+    "        self.recipe = Recipe()\n",
     "        self.current_tag = HTMLTag.UNKNOWN\n",
     "        super().__init__(convert_charrefs=convert_charrefs)\n",
     "    \n",
@@ -74,7 +178,7 @@
     "        self.current_tag = HTMLTag.from_tag(self.source, tag, attrs)\n",
     "        match self.current_tag:\n",
     "            case HTMLTag.INGREDIENT:\n",
-    "                self.ingredient = {}\n",
+    "                self.ingredient = Ingredient()\n",
     "        return super().handle_starttag(tag, attrs)\n",
     "    \n",
     "    def handle_data(self, data: str) -> None:\n",
@@ -83,16 +187,16 @@
     "            case HTMLTag.OVERVIEW_LABEL:\n",
     "                self.label = data.lower().strip(':,.! \\n\\t')\n",
     "            case HTMLTag.OVERVIEW_TEXT:\n",
-    "                self.recipe[self.label] = data.strip()\n",
+    "                self.recipe.other[self.label] = data.strip()\n",
     "            case HTMLTag.INGREDIENT_QUANTITY:\n",
-    "                self.ingredient['quantity'] = str_to_fraction(data)\n",
+    "                self.ingredient.quantity = str_to_fraction(data.strip())\n",
     "            case HTMLTag.INGREDIENT_UNIT:\n",
-    "                self.ingredient['unit'] = data\n",
+    "                self.ingredient.unit = data.strip()\n",
     "            case HTMLTag.INGREDIENT_NAME:\n",
-    "                self.ingredient['name'] = data\n",
-    "                self.recipe['ingredients'].append(self.ingredient)\n",
+    "                self.ingredient.name = data.strip()\n",
+    "                self.recipe.ingredients.append(self.ingredient)\n",
     "            case HTMLTag.STEP:\n",
-    "                self.recipe['steps'].append(data.strip())\n",
+    "                parse_and_add_step(data.strip(), self.recipe)\n",
     "        return super().handle_data(data)\n",
     "\n",
     "    def handle_endtag(self, tag: str) -> None:\n",
@@ -103,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "import requests\n",
     "\n",
-    "def get_recipe_from_url(url: str) -> dict | None:\n",
+    "def get_recipe_from_url(url: str) -> Recipe | None:\n",
     "    '''Retrieves the text of a recipe from a given URL'''\n",
     "\n",
     "    # Find recipe source; return None if unsupported\n",
@@ -134,68 +238,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'ingredients': [{'quantity': Fraction(3, 1),\n",
-       "   'name': 'eggplants, peeled and cut lengthwise into 1/2 inch thick slices'},\n",
-       "  {'name': 'salt to taste'},\n",
-       "  {'quantity': Fraction(1, 4), 'unit': 'cup', 'name': 'olive oil'},\n",
-       "  {'quantity': Fraction(1, 1), 'unit': 'tablespoon', 'name': 'butter'},\n",
-       "  {'quantity': Fraction(1, 1), 'unit': 'pound', 'name': 'lean ground beef'},\n",
-       "  {'quantity': Fraction(2, 1), 'name': 'onions, chopped'},\n",
-       "  {'quantity': Fraction(1, 1), 'unit': 'clove', 'name': 'garlic, minced'},\n",
-       "  {'name': 'ground black pepper to taste'},\n",
-       "  {'quantity': Fraction(2, 1), 'unit': 'tablespoons', 'name': 'dried parsley'},\n",
-       "  {'quantity': Fraction(1, 2), 'unit': 'teaspoon', 'name': 'fines herbs'},\n",
-       "  {'quantity': Fraction(1, 4), 'unit': 'teaspoon', 'name': 'ground cinnamon'},\n",
-       "  {'quantity': Fraction(1, 2),\n",
-       "   'unit': 'teaspoon',\n",
-       "   'name': 'ground nutmeg, divided'},\n",
-       "  {'quantity': Fraction(1, 1),\n",
-       "   'unit': '(8 ounce) can',\n",
-       "   'name': 'tomato sauce'},\n",
-       "  {'quantity': Fraction(1, 2), 'unit': 'cup', 'name': 'red wine'},\n",
-       "  {'quantity': Fraction(1, 1), 'name': 'egg, beaten'},\n",
-       "  {'quantity': Fraction(4, 1), 'unit': 'cups', 'name': 'milk'},\n",
-       "  {'quantity': Fraction(1, 2), 'unit': 'cup', 'name': 'butter'},\n",
-       "  {'quantity': Fraction(6, 1),\n",
-       "   'unit': 'tablespoons',\n",
-       "   'name': 'all-purpose flour'},\n",
-       "  {'name': 'ground white pepper, to taste'},\n",
-       "  {'quantity': Fraction(3, 2),\n",
-       "   'unit': 'cups',\n",
-       "   'name': 'freshly grated Parmesan cheese'}],\n",
-       " 'steps': ['Lay eggplant slices on paper towels; sprinkle lightly with salt. Let sit for 30 minutes to draw out moisture, then pat dry with paper towels.',\n",
-       "  'Warm olive oil in a skillet over high heat. Fry eggplant until browned, 2 to 3 minutes per side. Drain on paper towels; set aside.',\n",
-       "  'Melt 1 tablespoon butter in a large skillet over medium heat. Stir in ground beef, onions, and garlic; season with salt and black pepper. Cook and stir until beef is browned, 8 to 10 minutes.',\n",
-       "  'Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. Pour in tomato sauce and wine; mix well. Simmer for 20 minutes. Allow to cool, then stir in beaten egg.',\n",
-       "  'Scald milk in a saucepan over medium heat.',\n",
-       "  'At the same time, melt 1/2 cup butter in a large skillet over medium heat.',\n",
-       "  'Whisk flour into butter until smooth. Lower heat; gradually pour in scalded milk, whisking constantly until it thickens. Season béchamel sauce with salt and white pepper.',\n",
-       "  'Preheat the oven to 350 degrees F (175 degrees C). Grease a 9x13-inch baking dish.',\n",
-       "  'Arrange a single layer of eggplant in the prepared baking dish.',\n",
-       "  'Cover eggplant with meat sauce, then sprinkle 1/2 cup Parmesan cheese on top. Cover with remaining eggplant and sprinkle another 1/2 cup cheese on top.',\n",
-       "  'Pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg. Cover with remaining cheese.',\n",
-       "  'Bake in the preheated oven until bubbly and browned, about 1 hour.',\n",
-       "  'Serve hot and enjoy!'],\n",
-       " 'prep time': '45 mins',\n",
-       " 'cook time': '1 hr',\n",
-       " 'total time': '1 hr 45 mins',\n",
-       " 'servings': '8',\n",
-       " 'yield': '1 9x13-inch moussaka'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lay eggplant slices on paper towels. ['lay']\n",
+      "Sprinkle lightly with salt. ['sprinkle']\n",
+      "Let sit for 30 minutes to draw out moisture. ['sit']\n",
+      "Pat dry with paper towels. ['dry']\n",
+      "Warm olive oil in a skillet over high heat. ['oil']\n",
+      "Fry eggplant until browned, 2 to 3 minutes per side. ['eggplant']\n",
+      "Drain on paper towels. ['drain']\n",
+      "Set aside. ['set']\n",
+      "Melt 1 tablespoon butter in a large skillet over medium heat. ['melt']\n",
+      "Stir in ground beef, onions, and garlic. ['stir']\n",
+      "Season with salt and black pepper. ['season']\n",
+      "Cook and stir until beef is browned, 8 to 10 minutes. ['cook', 'stir']\n",
+      "Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. ['add']\n",
+      "Pour in tomato sauce and wine. ['pour']\n",
+      "Mix well. ['mix']\n",
+      "Simmer for 20 minutes. ['simmer']\n",
+      "Allow to cool. ['allow']\n",
+      "Stir in beaten egg. ['stir']\n",
+      "Scald milk in a saucepan over medium heat. ['milk']\n",
+      "At the same time, melt 1/2 cup butter in a large skillet over medium heat. ['melt']\n",
+      "Whisk flour into butter until smooth. ['flour']\n",
+      "Lower heat. ['heat']\n",
+      "Gradually pour in scalded milk, whisking constantly until it thickens. ['pour']\n",
+      "Season béchamel sauce with salt and white pepper. ['sauce']\n",
+      "Preheat the oven to 350 degrees F (175 degrees C). ['preheat']\n",
+      "Grease a 9x13-inch baking dish. ['grease']\n",
+      "Arrange a single layer of eggplant in the prepared baking dish. ['arrange']\n",
+      "Cover eggplant with meat sauce. ['cover']\n",
+      "Sprinkle 1/2 cup Parmesan cheese on top. ['sprinkle']\n",
+      "Cover with remaining eggplant and sprinkle another 1/2 cup cheese on top. ['cover', 'sprinkle']\n",
+      "Pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg. ['pour', 'sprinkle']\n",
+      "Cover with remaining cheese. ['cover']\n",
+      "Bake in the preheated oven until bubbly and browned, about 1 hour. ['bake']\n",
+      "Serve hot and enjoy!. ['serve']\n"
+     ]
     }
    ],
    "source": [
-    "get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")"
+    "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
+    "for step in recipe.steps:\n",
+    "    print(step.text, step.methods)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pour ROOT pour VERB [sauce, on, and, sprinkle]\n",
+      "béchamel compound sauce NOUN []\n",
+      "sauce dobj pour VERB [béchamel]\n",
+      "on prep pour VERB [top]\n",
+      "top pobj on ADP []\n",
+      "and cc pour VERB []\n",
+      "sprinkle conj pour VERB [with]\n",
+      "with prep sprinkle VERB [nutmeg]\n",
+      "remaining amod nutmeg NOUN []\n",
+      "1/4 nummod nutmeg NOUN []\n",
+      "teaspoon compound nutmeg NOUN []\n",
+      "nutmeg pobj with ADP [remaining, 1/4, teaspoon]\n",
+      "\n",
+      "béchamel sauce sauce dobj pour\n",
+      "top top pobj on\n",
+      "remaining 1/4 teaspoon nutmeg nutmeg pobj with\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load(\"en_core_web_md\")\n",
+    "\n",
+    "# text = \"lay eggplant slices on paper towels\"\n",
+    "# text = \"sprinkle lightly with salt.\"\n",
+    "# text = \"cook and stir until beef is browned, 8 to 10 minutes\"\n",
+    "# text = \"stir in ground beef, onions, and garlic\"\n",
+    "# text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
+    "# text = \"add lasagna noodles and cook for 10 minutes or until al dente\"\n",
+    "# text = \"preheat the oven to 350 degrees F (175 degrees C)\"\n",
+    "text = \"pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg\"\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "for token in doc:\n",
+    "    print(token.text, token.dep_, token.head.text, token.head.pos_,\n",
+    "            [child for child in token.children])\n",
+    "print()\n",
+    "for chunk in doc.noun_chunks:\n",
+    "    print(chunk.text, chunk.root.text, chunk.root.dep_,\n",
+    "            chunk.root.head.text)"
    ]
   }
  ],
