Correct non-imperative parsing

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +124,7 @@
     "\n",
     "    for text in steps:\n",
     "\n",
+    "        # Skip if empty\n",
     "        if not text:\n",
     "            continue\n",
     "\n",
@@ -138,10 +139,19 @@
     "        # its dataset).\n",
     "        text = ''.join([text[0].lower(), text[1:len(text)]])\n",
     "\n",
-    "        # Based on the dependency + part of speech tagging, parse necessary\n",
+    "        # Based on the dependency + part of speech tagging, extract necessary\n",
     "        # information.\n",
     "        doc = nlp(text)\n",
     "        for token in doc:\n",
+    "\n",
+    "            # If the parser didn't interpret this as an imperative sentence,\n",
+    "            # correct it.\n",
+    "            if token.dep_ == 'ROOT' and token.head.pos_ == 'NOUN':\n",
+    "                doc[0].dep_ = 'ROOT'\n",
+    "                token.dep_ = 'dobj'\n",
+    "                step.methods.append(doc[0].text)\n",
+    "\n",
+    "            # Perform extraction\n",
     "            dep = token.dep_\n",
     "            match dep:\n",
     "                case 'ROOT':\n",
@@ -149,7 +159,7 @@
     "                case 'conj':\n",
     "                    if token.head.pos_ == 'VERB':\n",
     "                        step.methods.append(token.text)\n",
-    "        \n",
+    "\n",
     "        # Save step to recipe\n",
     "        recipe.steps.append(step)"
    ]
@@ -238,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -248,9 +258,9 @@
       "Lay eggplant slices on paper towels. ['lay']\n",
       "Sprinkle lightly with salt. ['sprinkle']\n",
       "Let sit for 30 minutes to draw out moisture. ['sit']\n",
-      "Pat dry with paper towels. ['dry']\n",
-      "Warm olive oil in a skillet over high heat. ['oil']\n",
-      "Fry eggplant until browned, 2 to 3 minutes per side. ['eggplant']\n",
+      "Pat dry with paper towels. ['pat']\n",
+      "Warm olive oil in a skillet over high heat. ['warm']\n",
+      "Fry eggplant until browned, 2 to 3 minutes per side. ['fry']\n",
       "Drain on paper towels. ['drain']\n",
       "Set aside. ['set']\n",
       "Melt 1 tablespoon butter in a large skillet over medium heat. ['melt']\n",
@@ -263,12 +273,12 @@
       "Simmer for 20 minutes. ['simmer']\n",
       "Allow to cool. ['allow']\n",
       "Stir in beaten egg. ['stir']\n",
-      "Scald milk in a saucepan over medium heat. ['milk']\n",
+      "Scald milk in a saucepan over medium heat. ['scald']\n",
       "At the same time, melt 1/2 cup butter in a large skillet over medium heat. ['melt']\n",
-      "Whisk flour into butter until smooth. ['flour']\n",
-      "Lower heat. ['heat']\n",
+      "Whisk flour into butter until smooth. ['whisk']\n",
+      "Lower heat. ['lower']\n",
       "Gradually pour in scalded milk, whisking constantly until it thickens. ['pour']\n",
-      "Season béchamel sauce with salt and white pepper. ['sauce']\n",
+      "Season béchamel sauce with salt and white pepper. ['season']\n",
       "Preheat the oven to 350 degrees F (175 degrees C). ['preheat']\n",
       "Grease a 9x13-inch baking dish. ['grease']\n",
       "Arrange a single layer of eggplant in the prepared baking dish. ['arrange']\n",
@@ -290,29 +300,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pour ROOT pour VERB [sauce, on, and, sprinkle]\n",
+      "season compound sauce NOUN []\n",
       "béchamel compound sauce NOUN []\n",
-      "sauce dobj pour VERB [béchamel]\n",
-      "on prep pour VERB [top]\n",
-      "top pobj on ADP []\n",
-      "and cc pour VERB []\n",
-      "sprinkle conj pour VERB [with]\n",
-      "with prep sprinkle VERB [nutmeg]\n",
-      "remaining amod nutmeg NOUN []\n",
-      "1/4 nummod nutmeg NOUN []\n",
-      "teaspoon compound nutmeg NOUN []\n",
-      "nutmeg pobj with ADP [remaining, 1/4, teaspoon]\n",
+      "sauce ROOT sauce NOUN [season, béchamel, with]\n",
+      "with prep sauce NOUN [pepper]\n",
+      "salt nmod pepper NOUN [and, white]\n",
+      "and cc salt NOUN []\n",
+      "white conj salt NOUN []\n",
+      "pepper pobj with ADP [salt]\n",
       "\n",
-      "béchamel sauce sauce dobj pour\n",
-      "top top pobj on\n",
-      "remaining 1/4 teaspoon nutmeg nutmeg pobj with\n"
+      "season béchamel sauce sauce ROOT sauce\n",
+      "salt and white pepper pepper pobj with\n"
      ]
     }
    ],
@@ -327,7 +332,7 @@
     "# text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
     "# text = \"add lasagna noodles and cook for 10 minutes or until al dente\"\n",
     "# text = \"preheat the oven to 350 degrees F (175 degrees C)\"\n",
-    "text = \"pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg\"\n",
+    "text = \"season béchamel sauce with salt and white pepper\"\n",
     "\n",
     "doc = nlp(text)\n",
     "for token in doc:\n",
