Parse recipe title from URL

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -33,7 +33,7 @@
      "text": [
       "Collecting en-core-web-md==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl (33.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_md')\n"
      ]
@@ -101,6 +101,7 @@
     "    '''Struct holding recipe information'''\n",
     "\n",
     "    def __init__(self):\n",
+    "        self.title = \"\"\n",
     "        self.ingredients = []\n",
     "        self.steps = []\n",
     "        self.other = {}"
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +195,8 @@
     "    def handle_data(self, data: str) -> None:\n",
     "        # Handle text between tags as appropriate\n",
     "        match self.current_tag:\n",
+    "            case HTMLTag.TITLE:\n",
+    "                self.recipe.title = data.strip()\n",
     "            case HTMLTag.OVERVIEW_LABEL:\n",
     "                self.label = data.lower().strip(':,.! \\n\\t')\n",
     "            case HTMLTag.OVERVIEW_TEXT:\n",
@@ -248,17 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Moussaka \n",
+      "\n",
       "Lay eggplant slices on paper towels. ['lay']\n",
       "Sprinkle lightly with salt. ['sprinkle']\n",
       "Let sit for 30 minutes to draw out moisture. ['sit']\n",
-      "Pat dry with paper towels. ['pat']\n",
+      "Pat dry with paper towels. ['dry']\n",
       "Warm olive oil in a skillet over high heat. ['warm']\n",
       "Fry eggplant until browned, 2 to 3 minutes per side. ['fry']\n",
       "Drain on paper towels. ['drain']\n",
@@ -294,13 +299,14 @@
    ],
    "source": [
     "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
+    "print(recipe.title, '\\n')\n",
     "for step in recipe.steps:\n",
     "    print(step.text, step.methods)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
